# OOP

DeSerialization/: CMakeLists.txt  serialize.cpp  serialize.h
DeSerialization/test/: CMakeLists.txt  test.cpp
Obeder/: CMakeLists.txt  Obeder.cpp  Obeder.h  ObederReceipt.cpp  ObederReceipt.h  main.cpp
Obeder/test/: CMakeLists.txt  test.cpp
Vectors/: CMakeLists.txt  Vector.cpp  Vector.hpp
Vectors/test/: CMakeLists.txt  test.cpp
coin_collecting_robots/: BounceStrategy.h  CMakeLists.txt  Field.cpp  Field.h  GreedyStrategy.h  LadderStrategy.h  RandomDStrategy.h  RandomVHStrategy.h  Strategy.h  main.cpp
coin_collecting_robots/test/: CMakeLists.txt  test.cpp
csv/: CMakeLists.txt  main.cpp  parser.h  tuple_print.h
csv/tests/: CMakeLists.txt  test.cpp
drawing_lines/: BitmapPlusPlus.hpp  CMakeLists.txt  createbmp.cpp  img.cpp  img.h  input.txt  main.cpp
drawing_lines/test/: CMakeLists.txt  test.cpp
factory/: CMakeLists.txt  circle.h  line.h  main.cpp  object.cpp  object.h  point.h  rect.h
factory/tests/: CMakeLists.txt  test.cpp
task_0/: descrip_task.docx
task_0/task_00/: 1_task.cpp
task_0/task_0_a/: CMakeLists.txt  main.cpp  module1.cpp  module1.h  module2.h  module3.h
task_0/task_0_b/: CMakeLists.txt  input.txt  input2.txt  main.cpp  output.csv
